feat: Update response messages to use ConstantVariable and add snapshot not found message